--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/router": "3.0.0-alpha.8",
     "@angular/upgrade": "2.0.0-rc.2",
     "bootstrap": "^3.3.6",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "^0.1.4",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
@@ -31,7 +31,7 @@
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
