--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "typings install && webpack",
-    "start": "webpack-dev-server --history-api-fallback --progress --colors --content-base ./public/"
+    "start": "webpack-dev-server --history-api-fallback --progress --content-base ./public/"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.2",
